--- a/ML_3.ipynb
+++ b/ML_3.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
      "text": [
       "[nltk_data] Downloading package stopwords to\n",
       "[nltk_data]     C:\\Users\\leona\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Unzipping corpora\\stopwords.zip.\n"
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     },
     {
@@ -45,7 +45,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -71,6 +71,324 @@
    "source": [
     "print(stopwords.words('english'))"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data Pre-processing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = pd.read_csv('data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(20800, 5)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.shape # rows, columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>author</th>\n",
+       "      <th>text</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>House Dem Aide: We Didn’t Even See Comey’s Let...</td>\n",
+       "      <td>Darrell Lucus</td>\n",
+       "      <td>House Dem Aide: We Didn’t Even See Comey’s Let...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>FLYNN: Hillary Clinton, Big Woman on Campus - ...</td>\n",
+       "      <td>Daniel J. Flynn</td>\n",
+       "      <td>Ever get the feeling your life circles the rou...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Why the Truth Might Get You Fired</td>\n",
+       "      <td>Consortiumnews.com</td>\n",
+       "      <td>Why the Truth Might Get You Fired October 29, ...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>15 Civilians Killed In Single US Airstrike Hav...</td>\n",
+       "      <td>Jessica Purkiss</td>\n",
+       "      <td>Videos 15 Civilians Killed In Single US Airstr...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Iranian woman jailed for fictional unpublished...</td>\n",
+       "      <td>Howard Portnoy</td>\n",
+       "      <td>Print \\nAn Iranian woman has been sentenced to...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id                                              title              author  \\\n",
+       "0   0  House Dem Aide: We Didn’t Even See Comey’s Let...       Darrell Lucus   \n",
+       "1   1  FLYNN: Hillary Clinton, Big Woman on Campus - ...     Daniel J. Flynn   \n",
+       "2   2                  Why the Truth Might Get You Fired  Consortiumnews.com   \n",
+       "3   3  15 Civilians Killed In Single US Airstrike Hav...     Jessica Purkiss   \n",
+       "4   4  Iranian woman jailed for fictional unpublished...      Howard Portnoy   \n",
+       "\n",
+       "                                                text  label  \n",
+       "0  House Dem Aide: We Didn’t Even See Comey’s Let...      1  \n",
+       "1  Ever get the feeling your life circles the rou...      0  \n",
+       "2  Why the Truth Might Get You Fired October 29, ...      1  \n",
+       "3  Videos 15 Civilians Killed In Single US Airstr...      1  \n",
+       "4  Print \\nAn Iranian woman has been sentenced to...      1  "
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id           0\n",
+       "title      558\n",
+       "author    1957\n",
+       "text        39\n",
+       "label        0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = dataset.fillna('') # fill missing data with empty string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset['content'] = dataset['author']+' '+dataset['title']\n",
+    "# merging author and title into a new column content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0        Darrell Lucus House Dem Aide: We Didn’t Even S...\n",
+      "1        Daniel J. Flynn FLYNN: Hillary Clinton, Big Wo...\n",
+      "2        Consortiumnews.com Why the Truth Might Get You...\n",
+      "3        Jessica Purkiss 15 Civilians Killed In Single ...\n",
+      "4        Howard Portnoy Iranian woman jailed for fictio...\n",
+      "                               ...                        \n",
+      "20795    Jerome Hudson Rapper T.I.: Trump a ’Poster Chi...\n",
+      "20796    Benjamin Hoffman N.F.L. Playoffs: Schedule, Ma...\n",
+      "20797    Michael J. de la Merced and Rachel Abrams Macy...\n",
+      "20798    Alex Ansary NATO, Russia To Hold Parallel Exer...\n",
+      "20799              David Swanson What Keeps the F-35 Alive\n",
+      "Name: content, Length: 20800, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dataset['content'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# divide the label and data\n",
+    "x = dataset.drop(columns='label', axis=1)\n",
+    "y = dataset['label']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          id                                              title  \\\n",
+      "0          0  House Dem Aide: We Didn’t Even See Comey’s Let...   \n",
+      "1          1  FLYNN: Hillary Clinton, Big Woman on Campus - ...   \n",
+      "2          2                  Why the Truth Might Get You Fired   \n",
+      "3          3  15 Civilians Killed In Single US Airstrike Hav...   \n",
+      "4          4  Iranian woman jailed for fictional unpublished...   \n",
+      "...      ...                                                ...   \n",
+      "20795  20795  Rapper T.I.: Trump a ’Poster Child For White S...   \n",
+      "20796  20796  N.F.L. Playoffs: Schedule, Matchups and Odds -...   \n",
+      "20797  20797  Macy’s Is Said to Receive Takeover Approach by...   \n",
+      "20798  20798  NATO, Russia To Hold Parallel Exercises In Bal...   \n",
+      "20799  20799                          What Keeps the F-35 Alive   \n",
+      "\n",
+      "                                          author  \\\n",
+      "0                                  Darrell Lucus   \n",
+      "1                                Daniel J. Flynn   \n",
+      "2                             Consortiumnews.com   \n",
+      "3                                Jessica Purkiss   \n",
+      "4                                 Howard Portnoy   \n",
+      "...                                          ...   \n",
+      "20795                              Jerome Hudson   \n",
+      "20796                           Benjamin Hoffman   \n",
+      "20797  Michael J. de la Merced and Rachel Abrams   \n",
+      "20798                                Alex Ansary   \n",
+      "20799                              David Swanson   \n",
+      "\n",
+      "                                                    text  \\\n",
+      "0      House Dem Aide: We Didn’t Even See Comey’s Let...   \n",
+      "1      Ever get the feeling your life circles the rou...   \n",
+      "2      Why the Truth Might Get You Fired October 29, ...   \n",
+      "3      Videos 15 Civilians Killed In Single US Airstr...   \n",
+      "4      Print \\nAn Iranian woman has been sentenced to...   \n",
+      "...                                                  ...   \n",
+      "20795  Rapper T. I. unloaded on black celebrities who...   \n",
+      "20796  When the Green Bay Packers lost to the Washing...   \n",
+      "20797  The Macy’s of today grew from the union of sev...   \n",
+      "20798  NATO, Russia To Hold Parallel Exercises In Bal...   \n",
+      "20799    David Swanson is an author, activist, journa...   \n",
+      "\n",
+      "                                                 content  \n",
+      "0      Darrell Lucus House Dem Aide: We Didn’t Even S...  \n",
+      "1      Daniel J. Flynn FLYNN: Hillary Clinton, Big Wo...  \n",
+      "2      Consortiumnews.com Why the Truth Might Get You...  \n",
+      "3      Jessica Purkiss 15 Civilians Killed In Single ...  \n",
+      "4      Howard Portnoy Iranian woman jailed for fictio...  \n",
+      "...                                                  ...  \n",
+      "20795  Jerome Hudson Rapper T.I.: Trump a ’Poster Chi...  \n",
+      "20796  Benjamin Hoffman N.F.L. Playoffs: Schedule, Ma...  \n",
+      "20797  Michael J. de la Merced and Rachel Abrams Macy...  \n",
+      "20798  Alex Ansary NATO, Russia To Hold Parallel Exer...  \n",
+      "20799            David Swanson What Keeps the F-35 Alive  \n",
+      "\n",
+      "[20800 rows x 5 columns]\n",
+      "0        1\n",
+      "1        0\n",
+      "2        1\n",
+      "3        1\n",
+      "4        1\n",
+      "        ..\n",
+      "20795    0\n",
+      "20796    0\n",
+      "20797    0\n",
+      "20798    1\n",
+      "20799    1\n",
+      "Name: label, Length: 20800, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Stemming-reducing a word to its root word"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
