--- a/ML_3.ipynb
+++ b/ML_3.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
        "True"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
        "(20800, 5)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
        "4  Print \\nAn Iranian woman has been sentenced to...      1  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -386,9 +386,319 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "port_stem = PorterStemmer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stemming(content):  # function stemming with content as the input for it\n",
+    "          stemmed_content = re.sub('[^a-zA-Z]', ' ', content) # using imported re and using function sub to substitute the said values\n",
+    "          stemmed_content = stemmed_content.lower() # converting all letters to lower cases to help the ML model\n",
+    "          stemmed_content = stemmed_content.split() # splitting and converting to a list\n",
+    "          stemmed_content = [port_stem.stem(word) for word in stemmed_content if not word in stopwords.words('english')] # For loop to parse the data to remove all the words from stopwords and leave only the important words\n",
+    "          stemmed_content = ' '.join(stemmed_content) # join all the words\n",
+    "          return stemmed_content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset['content'] = dataset['content'].apply(stemming) # applying the function stemming"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0        darrel lucu hous dem aid even see comey letter...\n",
+      "1        daniel j flynn flynn hillari clinton big woman...\n",
+      "2                   consortiumnew com truth might get fire\n",
+      "3        jessica purkiss civilian kill singl us airstri...\n",
+      "4        howard portnoy iranian woman jail fiction unpu...\n",
+      "                               ...                        \n",
+      "20795    jerom hudson rapper trump poster child white s...\n",
+      "20796    benjamin hoffman n f l playoff schedul matchup...\n",
+      "20797    michael j de la merc rachel abram maci said re...\n",
+      "20798    alex ansari nato russia hold parallel exercis ...\n",
+      "20799                            david swanson keep f aliv\n",
+      "Name: content, Length: 20800, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dataset['content'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data vs label\n",
+    "x = dataset['content'].values # .values attribute converts data into a NumPy array \n",
+    "y = dataset['label'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['darrel lucu hous dem aid even see comey letter jason chaffetz tweet'\n",
+      " 'daniel j flynn flynn hillari clinton big woman campu breitbart'\n",
+      " 'consortiumnew com truth might get fire' ...\n",
+      " 'michael j de la merc rachel abram maci said receiv takeov approach hudson bay new york time'\n",
+      " 'alex ansari nato russia hold parallel exercis balkan'\n",
+      " 'david swanson keep f aliv']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 0 1 ... 0 1 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(20800,)"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(20800,)"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.shape"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Using TfidfVectorizer to convert text to numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vectorizer = TfidfVectorizer() # reduces the value of high frequency words\n",
+    "vectorizer.fit(x)\n",
+    "\n",
+    "x = vectorizer.transform(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  (0, 15686)\t0.28485063562728646\n",
+      "  (0, 13473)\t0.2565896679337957\n",
+      "  (0, 8909)\t0.3635963806326075\n",
+      "  (0, 8630)\t0.29212514087043684\n",
+      "  (0, 7692)\t0.24785219520671603\n",
+      "  (0, 7005)\t0.21874169089359144\n",
+      "  (0, 4973)\t0.233316966909351\n",
+      "  (0, 3792)\t0.2705332480845492\n",
+      "  (0, 3600)\t0.3598939188262559\n",
+      "  (0, 2959)\t0.2468450128533713\n",
+      "  (0, 2483)\t0.3676519686797209\n",
+      "  (0, 267)\t0.27010124977708766\n",
+      "  (1, 16799)\t0.30071745655510157\n",
+      "  (1, 6816)\t0.1904660198296849\n",
+      "  (1, 5503)\t0.7143299355715573\n",
+      "  (1, 3568)\t0.26373768806048464\n",
+      "  (1, 2813)\t0.19094574062359204\n",
+      "  (1, 2223)\t0.3827320386859759\n",
+      "  (1, 1894)\t0.15521974226349364\n",
+      "  (1, 1497)\t0.2939891562094648\n",
+      "  (2, 15611)\t0.41544962664721613\n",
+      "  (2, 9620)\t0.49351492943649944\n",
+      "  (2, 5968)\t0.3474613386728292\n",
+      "  (2, 5389)\t0.3866530551182615\n",
+      "  (2, 3103)\t0.46097489583229645\n",
+      "  :\t:\n",
+      "  (20797, 13122)\t0.2482526352197606\n",
+      "  (20797, 12344)\t0.27263457663336677\n",
+      "  (20797, 12138)\t0.24778257724396507\n",
+      "  (20797, 10306)\t0.08038079000566466\n",
+      "  (20797, 9588)\t0.174553480255222\n",
+      "  (20797, 9518)\t0.2954204003420313\n",
+      "  (20797, 8988)\t0.36160868928090795\n",
+      "  (20797, 8364)\t0.22322585870464118\n",
+      "  (20797, 7042)\t0.21799048897828688\n",
+      "  (20797, 3643)\t0.21155500613623743\n",
+      "  (20797, 1287)\t0.33538056804139865\n",
+      "  (20797, 699)\t0.30685846079762347\n",
+      "  (20797, 43)\t0.29710241860700626\n",
+      "  (20798, 13046)\t0.22363267488270608\n",
+      "  (20798, 11052)\t0.4460515589182236\n",
+      "  (20798, 10177)\t0.3192496370187028\n",
+      "  (20798, 6889)\t0.32496285694299426\n",
+      "  (20798, 5032)\t0.4083701450239529\n",
+      "  (20798, 1125)\t0.4460515589182236\n",
+      "  (20798, 588)\t0.3112141524638974\n",
+      "  (20798, 350)\t0.28446937819072576\n",
+      "  (20799, 14852)\t0.5677577267055112\n",
+      "  (20799, 8036)\t0.45983893273780013\n",
+      "  (20799, 3623)\t0.37927626273066584\n",
+      "  (20799, 377)\t0.5677577267055112\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Splitting training and test data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size = 0.3, stratify=y, random_state=2) # train_test_split function applying 30 % of the data to test, stratify to make the data proporcional"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Training Model\n",
+    "\n",
+    "Logistic Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = LogisticRegression()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LogisticRegression</label><div class=\"sk-toggleable__content\"><pre>LogisticRegression()</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "LogisticRegression()"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(x_train, y_train)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Evaluation using accuracy = TP+TN/(TP+TN+FP+FN)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train_predict = model.predict(x_train)\n",
+    "training_data_accuracy = accuracy_score(x_train_predict, y_train)\n"
+   ]
   }
  ],
  "metadata": {
