--- a/ML_3.ipynb
+++ b/ML_3.ipynb
@@ -692,13 +692,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train_predict = model.predict(x_train)\n",
-    "training_data_accuracy = accuracy_score(x_train_predict, y_train)\n"
+    "x_train_predict = model.predict(x_train) # using trained model to make predictions on x_train\n",
+    "training_data_accuracy = accuracy_score(x_train_predict, y_train) # comparing the predicted labels of x_train_predict with the y_train labels"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy score of the training set:  0.9850961538461539\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Accuracy score of the training set: ', training_data_accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
